wacc/test/golden/semanticErr.exit.badCharExit
# tries to exit using a character

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  exit 'a'
end


Semantic error in test/wacc_examples/invalid/semanticErr/exit/badCharExit.wacc (line 12, column 8):
type error: expected an int but found a char
> begin
>   exit 'a'
>        ^
> end

